ONE LOVE, LET'S GET TOGETHER AND FEEL ALRIGHT

--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -21,6 +21,7 @@ provider:
         - dynamodb:GetItem
         - dynamodb:Query
         - dynamodb:Scan
+        - dynamodb:DeleteItem # Added this line
       Resource:
         - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TRIPS_TABLE}
         - arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.USERS_TABLE}
@@ -115,7 +116,6 @@ functions:
     events:
       - websocket:
           route: $default
-
 
 resources:
   Resources:
