--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,10 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
 
-      - name: Install Serverless Framework
-        run: npm install -g serverless
+      - name: Install Serverless Framework and plugins
+        run: |
+          npm install -g serverless
+          npm install -g serverless-python-requirements
 
       - name: Set up AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
