--- a/lambdas/Dockerfile
+++ b/lambdas/Dockerfile
@@ -1,6 +1,10 @@
 # Use the official AWS Lambda base image for Python
 FROM public.ecr.aws/lambda/python:3.9
 
+# Install pip if it's not available
+RUN python -m ensurepip --upgrade || true
+RUN python -m pip install --upgrade pip
+
 # Set the working directory inside the container
 WORKDIR /var/task
 
@@ -12,5 +16,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Set the entry point to the function handler
-# You can specify the handler here if needed or in the `serverless.yml`
 CMD ["lambda_function.handler"]
