--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,13 @@ jobs:
           npm install -g serverless
           npm install -g serverless-python-requirements
 
-      - name: Set up Python and prepare Lambda package
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+
+      - name: Install Python dependencies and prepare Lambda package
+        working-directory: ./lambdas
         run: |
           # Set up Python environment
           python -m venv venv
