--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,19 +32,28 @@ jobs:
           npm install -g serverless
           npm install -g serverless-python-requirements
 
-      - name: Set up Python
+      - name: Set up Python and prepare Lambda package
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-
-      - name: Install Python dependencies
-        working-directory: ./lambdas
         run: |
+          # Set up Python environment
           python -m venv venv
           source venv/bin/activate
+
+          # Install Python dependencies
           pip install --no-cache-dir -r requirements.txt
           find venv/lib/python*/site-packages -type d -name '__pycache__' -exec rm -rf {} +
           find venv/lib/python*/site-packages -type d -name '*.dist-info' -exec rm -rf {} +
+          find venv/**
+          find .serverless*
+
+          # Prepare Lambda package
+          mkdir -p package
+          cp -r venv/lib/python*/site-packages/* package/
+          cp -r .serverless* package/
+          cd package
+          zip -r ../lambda-package.zip .
 
       - name: Deploy Moonrides Backend
         working-directory: ./lambdas
