--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,8 @@ jobs:
           pip install --no-cache-dir -r requirements.txt
           find venv/lib/python*/site-packages -type d -name '__pycache__' -exec rm -rf {} +
           find venv/lib/python*/site-packages -type d -name '*.dist-info' -exec rm -rf {} +
-          find venv/lib
-          find .serverless
+          find venv/lib -type d -name '__pycache__' -exec rm -rf {} +
+          find venv/lib -type d -name '*.dist-info' -exec rm -rf {} +
 
       - name: Deploy Moonrides Backend
         working-directory: ./lambdas
