--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install --no-cache-dir setuptools
-          pip install --no-cache-dir python-geohash
+          pip install --no-cache-dir Geohash
           pip install --no-cache-dir -r requirements.txt
 
       - name: Deploy Moonrides Backend
