--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -43,6 +43,7 @@ plugins:
 
 custom:
   pythonRequirements:
+    dockerizePip: true
     zip: true  # Compress the requirements into a zip file
     layer: true  # Use a Lambda Layer for the dependencies
     include:
