--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,6 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
-          pip install --no-cache-dir -r requirements.txt
 
       - name: Deploy Moonrides Backend
         working-directory: ./lambdas
@@ -55,4 +54,5 @@ jobs:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
         run: |
           source venv/bin/activate
+          pip install -r requirements.txt
           npx serverless deploy --verbose
